2000-08-29  Dave Love  <fx@gnu.org>

	* gnus.el (gnus-group-startup-message): Specify foreground and
	background for xpm image.  Centre image vertically.
	From Katsumi Yamaoka <yamaoka@jpl.org> with mods.

2000-08-24 23:49:23  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* message.el (message-send-mail): Narrow-to-headers.

2000-08-24  Dave Love  <fx@gnu.org>

	* gnus-art.el (gnus-insert-mime-button): Fix help-echo for Emacs
	21.

2000-08-23  Dave Love  <fx@gnu.org>

	* dgnushack.el: Remove `member-if' compiler macro.

2000-08-21  Dave Love  <fx@gnu.org>

	* nnimap.el (nnimap-request-newgroups): Eschew member-if.

2000-08-21 10:09:47  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-topic.el (gnus-topic-hide-topic): Use find-topology if
	permanent is used.
	(gnus-topic-show-topic): Read topic when to show permanent hidden
	topic.
	(gnus-topic-remove-topic): Revert to the old behavior, not using
	hide.

2000-08-21  Dave Love  <fx@gnu.org>

	* gnus-ems.el (gnus-add-minor-mode): Add &rest arg.
	(gnus-xemacs): Use featurep.

	* mm-util.el (mm-read-charset): Maybe use builtin.
	(mm-replace-chars-in-string): Maybe use subst-char-in-string.
	(mm-multibyte-p, mm-with-unibyte-current-buffer)
	(mm-with-unibyte): Use featurep, not string-match.
	(mm-with-unibyte-buffer): Simplify.
	(mm-quote-arg): Maybe use shell-quote-argument.

	* mml.el (mml-make-string): Deleted (unused).

	* gnus.el (gnus-mode-line-buffer-identification): Supply
	definition for Emacs 21.

	* gnus-salt.el: Small doc fixes.
	(gnus-pick-mode, gnus-binary-mode): Supply a toggle-func arg to
	gnus-add-minor-mode.

	* gnus-topic.el (gnus-topic-mode): Supply a toggle-func arg to
	gnus-add-minor-mode.

2000-08-20  Simon Josefsson  <simon@josefsson.org>

	* nnimap.el (nnimap-before-find-minmax-bugworkaround): New
	function, thanks to Lloyd Zusman for debugging.
	(nnimap-request-group): 
	(nnimap-request-list): 
	(nnimap-retrieve-groups): 
	(nnimap-request-newgroups): Use it.
