@@ -70,48 +70,6 @@
 	`(let ((seq ,seq))
 	   (mapcar ,fn seq)
 	   seq))))
-
-  (define-compiler-macro mapcon (&whole form fn seq &rest rest)
-    (if (and (fboundp 'mapcon)
-	     (subrp (symbol-function 'mapcon)))
-	form
-      (if rest
-	  `(let ((fn ,fn)
-		 res
-		 (args (list ,seq ,@rest))
-		 p)
-	     (while (not (memq nil args))
-	       (push (apply ,fn args) res)
-	       (setq p args)
-	       (while p
-		 (setcar p (cdr (pop p)))
-		 ))
-	     (apply (function nconc) (nreverse res)))
-	`(let ((fn ,fn)
-	       res
-	       (arg ,seq))
-	   (while arg
-	     (push (funcall ,fn arg) res)
-	     (setq arg (cdr arg)))
-	   (apply (function nconc) (nreverse res))))))
-
-  (define-compiler-macro union (&whole form list1 list2)
-    (if (and (fboundp 'union)
-	     (subrp (symbol-function 'union)))
-	form
-      `(let ((a ,list1)
-	     (b ,list2))
-	 (cond ((null a) b)
-	       ((null b) a)
-	       ((equal a b) a)
-	       (t
-		(or (>= (length a) (length b))
-		    (setq a (prog1 b (setq b a))))
-		(while b
-		  (or (memq (car b) a)
-		      (push (car b) a))
-		  (pop b))
-		a)))))
   )
 
 (provide 'gnus-clfns)
