@@ -21,7 +21,6 @@
 ;; Boston, MA 02111-1307, USA.
 
 (eval-when-compile (require 'cl))
-(eval-when-compile (require 'gnus-clfns))
 
 (require 'gnus)
 (require 'gnus-sum)
@@ -182,8 +181,12 @@ Calling (gnus-group-split-fancy nil nil \"mail.misc\") returns:
 			 (list 'any split-regexp)
 			 ;; Generate RESTRICTs for SPLIT-EXCLUDEs.
 			 (if (listp split-exclude)
-			     (mapcon (lambda (arg) (cons '- arg))
-				     split-exclude)
+			     (let ((seq split-exclude)
+				   res)
+			       (while seq
+				 (push (cons '- (pop seq))
+				       res))
+			       (apply #'nconc (nreverse res)))
 			   (list '- split-exclude))
 			 (list group-clean))
 			split)
